chages to support new API queries

--- a/02_APIQueries_Model.ipynb
+++ b/02_APIQueries_Model.ipynb
@@ -32,7 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "from DataPipeline import APIRequest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +62,13 @@
     "#!!!!!!!!!!!! THIS IS NOT IMPLEMENTED!!!!!!!!!!!!!!!!!!!!!!\n",
     "from pipeline import MwRequest\n",
     "req = MwRequest() \n",
-    "result = req.do_input({'query_id':'table_insert',\n",
+    "result = APIRequest.APIRequest.submit({\n",
+    "                      'pipeline_id':'MwBasePipeline',\n",
+    "                      'query_id':'table_insert',\n",
     "                      'api_key':'API_USER_123',\n",
     "                       'query':{'keys':{'key_1':1,'key_2':'value1234'},\n",
     "                                'fields':{'field_name':'James','anotherfield_height':3.9}},\n",
-    "                      },{})\n",
+    "                      })\n",
     "if 'error' in result:\n",
     "    print(result['error'])\n",
     "else:\n",
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,13 +97,13 @@
    ],
    "source": [
     "#!!!!!!!!!!!! PERMISSIONS ERROR !!!!!!!!!!!!!!!!!!!!!!\n",
-    "from pipeline import MwRequest\n",
-    "req = MwRequest() \n",
-    "result = req.do_input({'query_id':'table_insert',\n",
+    "result = APIRequest.APIRequest.submit({\n",
+    "                      'pipeline_id':'MwBasePipeline',    \n",
+    "                        'query_id':'table_insert',\n",
     "                      'api_key':'API_USER_12355354545',\n",
     "                       'query':{'keys':{'key_1':1,'key_2':'value1234'},\n",
     "                                'fields':{'field_name':'James','anotherfield_height':3.9}},\n",
-    "                      },{})\n",
+    "                      })\n",
     "if 'error' in result:\n",
     "    print(result['error'])\n",
     "else:\n",
